--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/codenews
     username: postgres
-    password: sua-senha
-    driver-class-name: org.postgresql.Driver  # adicione explicitamente
+    password: abc123
+    driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
@@ -19,19 +19,24 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: seuemail@gmail.com
-    password: senha-do-app
+    username: rafinhalvarenga@gmail.com
+    password: nabj imtg sury vfcl
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
+      mail.debug: true
+      mail.smtp.debug: true
 
-kafka:
-  bootstrap-servers: localhost:9092
-  consumer:
-    group-id: techpulse-group
-    auto-offset-reset: earliest
-    key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-    value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-  producer:
-    key-serializer: org.apache.kafka.common.serialization.StringSerializer
-    value-serializer: org.apache.kafka.common.serialization.StringSerializer
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: codenews-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    newsletter:
+      batch:
+        size: 1
