feat: implementar pipeline de newsletter com Kafka e scrape
• Atualiza pom.xml com dependências de Kafka, JSoup e Spring Mail
• Ajusta CodeNewsApplication para iniciar PipelineService automaticamente
• Configurações em KafkaConfig e adiciona NewsletterProperties para parametrizar envio de e-mail
• Expõe novos endpoints em NewsController e SubscriberController para CRUD de notícias e assinantes
• Refatora EmailService para enviar newsletter via SMTP (Spring Boot Mail)
• Implementa entidades JPA News e Subscriber, ajusta repositórios NewsRepository e SubscriberRepository
• Cria PipelineService para orquestrar fluxo: scraping → persistência → Kafka → consumo → montagem de e-mail
• Desenvolve NewsProducerService e NewsConsumerService para produzir/consumir mensagens do tópico “news-topic”
• Implementa NewsScraperService utilizando JSoup para extrair manchetes de sites de tecnologia
• Define NewsletterScheduler para agendamento diário do envio de newsletter
• Atualiza application.yml com configurações de banco H2, Kafka e propriedades de e-mail

Essas alterações estabelecem a estrutura completa da pipeline de coleta, processamento e envio de newsletter diária.

--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,32 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- Jsoup (web scraping) -->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.15.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.17.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
         <!-- Lombok -->
