feat: landing page estática com vídeo de fundo em loop, design responsivo e melhorias de acessibilidade
- Fundo em vídeo mp4 em loop contínuo com fallback em imagem
- Layout dark-mode com CSS puramente estático
- Hero title e subtítulo de alto impacto
- Formulário acessível com labels, aria-required e validação HTML5
- Botões estilizados com hover e transições suaves
- Progressive enhancement: noscript warning e preload metadata
- Código organizado em src/main/resources/static para deploy imediato

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,15 @@ server:
   port: 8080
 
 spring:
+  mvc:
+    cors:
+      mappings:
+        /api/**:
+          allowed-origins: "http://localhost:8080"
+          allowed-methods: "*"
+          allowed-headers: "*"
+          allow-credentials: true
+
   datasource:
     url: jdbc:postgresql://localhost:5432/codenews
     username: postgres
@@ -60,4 +69,4 @@ spring:
 
 scheduler:
   cron:
-    daily: 0 47 23 * * *
+    daily: 0 00 12 * * *
