--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,8 +14,9 @@ spring:
           allow-credentials: true
 
   datasource:
-    # Railway expõe DATABASE_URL (jdbc://user:pass@host:port/db)
-    url: jdbc:${DATABASE_URL}
+    url:      ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
