--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,29 +1,26 @@
 server:
-  # Railway define a porta via ENV var PORT
-  port: ${PORT:8080}
+  port: 8080
 
 spring:
   mvc:
     cors:
       mappings:
         /api/**:
-          # URL do front-end (ex: sua app Vercel). Defina FRONTEND_URL no Railway.
-          allowed-origins: "${FRONTEND_URL}"
+          allowed-origins: "http://localhost:3000"
           allowed-methods: "*"
           allowed-headers: "*"
           allow-credentials: true
 
   datasource:
-    url:      ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: jdbc:postgresql://localhost:5432/codenews
+    username: postgres
+    password: abc123
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      # Em produção, não recriar esquema automaticamente
-      ddl-auto: validate
-    show-sql: false
+      ddl-auto: update
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -31,24 +28,23 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
+    username: rafinhalvarenga@gmail.com
+    password: nabj imtg sury vfcl
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
-        debug: false
+        debug: true
 
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
+    bootstrap-servers: localhost:9092
     topic:
-      # Exemplo: defina KAFKA_TOPIC_NEWS ou use o padrão
-      news: ${KAFKA_TOPIC_NEWS:codenews-news}
+      news: codenews-news
 
     consumer:
-      group-id: ${KAFKA_CONSUMER_GROUP:codenews-group}
+      group-id: codenews-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
@@ -66,19 +62,18 @@ spring:
             default:
               type: org.codenews.model.News
 
+    # Tamanho de lote para newsletter (batch):
     newsletter:
       batch:
-        size: ${NEWSLETTER_BATCH_SIZE:10}
+        size: 10
 
 scheduler:
   cron:
-    # Se quiser alterar o horário, basta mudar esta ENV
-    daily: ${SCHEDULER_CRON_DAILY:0 20 04 * * *}
+    daily: 0 20 04 * * *
 
 app:
   scraper:
-    # URL do RSS — também pode vir de ENV
-    rss-url: ${SCRAPER_RSS_URL:https://feeds2.feedburner.com/canaltechbr}
+    rss-url: "https://feeds2.feedburner.com/canaltechbr"
   email:
     welcome:
-      subject: ${EMAIL_WELCOME_SUBJECT:Bem-vindo ao CodeNews!}
+      subject: "Bem-vindo ao CodeNews!"
