--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -12,9 +12,7 @@ spring:
           allow-credentials: true
 
   datasource:
-    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-    username: ${PGUSER}
-    password: ${PGPASSWORD}
+    url: jdbc:${DATABASE_URL}
     driver-class-name: org.postgresql.Driver
 
   jpa:
