ajuste nas variaves de ambiente

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
           allow-credentials: true
 
   datasource:
-    url: "${SPRING_DATASOURCE_URL}"
+    url: "${DATABASE_URL}"
     driver-class-name: org.postgresql.Driver
 
   jpa:
