ajuste nas variaves de ambiente

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,77 +1,70 @@
+# src/main/resources/application-prod.yml
 server:
-  port: 8080
+  # Render injeta a porta em PORT
+  port: ${PORT:8080}
 
 spring:
   mvc:
     cors:
       mappings:
         /api/**:
-          allowed-origins: "http://localhost:3000"
+          # Defina FRONTEND_URL nas env vars (ex: https://meu-frontend.onrender.com)
+          allowed-origins: "https://codenewsfront.netlify.app/"
           allowed-methods: "*"
           allowed-headers: "*"
           allow-credentials: true
 
   datasource:
-    url: "${DATABASE_URL}"
+    # Render injeta DATABASE_URL no formato postgres://user:pass@host:port/db
+    # O Spring Boot consegue parsear se começar com "jdbc:postgresql://"
+    url: jdbc:${DATABASE_URL}
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update
-    show-sql: true
+      # Em produção, não faça auto-update no schema
+      ddl-auto: validate
+    show-sql: false
     properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 
   mail:
     host: smtp.gmail.com
     port: 587
-    username: rafinhalvarenga@gmail.com
-    password: nabj imtg sury vfcl
+    username: ${SPRING_MAIL_USERNAME}
+    password: ${SPRING_MAIL_PASSWORD}
     properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-        debug: true
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
 
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
     topic:
-      news: codenews-news
-
+      news: ${KAFKA_TOPIC_NEWS:codenews-news}
     consumer:
       group-id: codenews-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-
     properties:
-      spring:
-        json:
-          trusted:
-            packages: org.codenews.model
-          value:
-            default:
-              type: org.codenews.model.News
-
-    # Tamanho de lote para newsletter (batch):
+      spring.json.trusted.packages: org.codenews.model
+      spring.json.value.default.type: org.codenews.model.News
+    # tamanho do batch para envio de newsletter
     newsletter:
       batch:
         size: 10
 
 scheduler:
   cron:
+    # executa todo dia às 04:20
     daily: 0 20 04 * * *
 
 app:
   scraper:
-    rss-url: "https://feeds2.feedburner.com/canaltechbr"
+    rss-url: https://feeds2.feedburner.com/canaltechbr
   email:
     welcome:
       subject: "Bem-vindo ao CodeNews!"
