Configurações kafka para o Redpanda

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -31,6 +31,13 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>3.6.2</version>
+        </dependency>
+
+
         <!-- Spring Boot Starter Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -75,7 +82,6 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.15.4</version>
         </dependency>
 
         <dependency>
