--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     cors:
       mappings:
         /api/**:
-          allowed-origins: "https://codenewsfront.netlify.app/"
+          allowed-origins: "*"
           allowed-methods: "*"
           allowed-headers: "*"
           allow-credentials: true
